[gd_scene load_steps=4 format=3 uid="uid://dj0nvn27k245o"]

[ext_resource type="Script" path="res://Scripts/results.gd" id="1_6au4g"]
[ext_resource type="Theme" uid="uid://dekt75mg06nhr" path="res://new_theme.tres" id="2_tr61v"]

[sub_resource type="LabelSettings" id="LabelSettings_jj0c8"]
font_size = 30
font_color = Color(0, 0, 0, 1)

[node name="Results" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6au4g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
alignment = 1

[node name="Results" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
text = "Results"
label_settings = SubResource("LabelSettings_jj0c8")
horizontal_alignment = 1
text_direction = 1
language = "en_US"

[node name="LabelMealsDelivered" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
text = "(delivered here)"
label_settings = SubResource("LabelSettings_jj0c8")
horizontal_alignment = 1
text_direction = 1
language = "en_US"

[node name="LabelMealsLost" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
text = "(lost here)"
label_settings = SubResource("LabelSettings_jj0c8")
horizontal_alignment = 1
text_direction = 1
language = "en_US"

[node name="PlayAgain" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
text = "Play Again"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_tr61v")
text = "Quit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/PlayAgain" to="." method="_on_play_again_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
